<resources>
    <string name="app_name">Nooze</string>
    <string name="action_settings">Settings</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="adventure_sports">Adventure Sports</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="environment">Environment</string>
    <string name="fashion">Fashion</string>
    <string name="financial">Financial</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="style">Style</string>
    <string name="technology">Technology</string>
    <string name="u_s">U.S.</string>
    <string name="wealth">Wealth</string>
    <string name="world">World</string>
</resources>
