<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/recycler_view_background"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"
                />
        </android.support.v7.widget.Toolbar>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:id="@+id/horizontalScrollView"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="8dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        style="@style/ToolbarCategories"
                        android:text="@string/adventure_sports"
                        android:tag="Adventure Sports"
                        android:id="@+id/adventureSports"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/arts"
                        android:text="@string/arts"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/business"
                        android:text="@string/business"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/entrepreneurs"
                        android:text="@string/entrepreneurs"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/environment"
                        android:text="@string/environment"/>

                    <TextView
                        style="@style/ToolbarCategories"
                        android:text="@string/fashion"
                        android:id="@+id/fashion"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/financial"
                        android:text="@string/financial"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/food"
                        android:text="@string/food"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/health"
                        android:text="@string/health"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/sports"
                        android:text="@string/sports"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/style"
                        android:text="@string/style"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:text="@string/technology"
                        android:id="@+id/technology" />
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/us"
                        android:text="@string/u_s"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/wealth"
                        android:text="@string/wealth"/>
                    <TextView
                        style="@style/ToolbarCategories"
                        android:id="@+id/world"
                        android:text="@string/world"/>
                </LinearLayout>
            </HorizontalScrollView>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_search"/>

</android.support.design.widget.CoordinatorLayout>
